<resources>
    <string name="app_name">Chatter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="missing_fields">All fields must be complete before sending</string>

    <string name="auth_failed">The email or password entered is invalid</string>
    <string name="enter_credentials">Please enter credentials before continuing</string>


    <string name="new_message_fragment_title">New Conversation</string>
    <string name="new_message_name_hint">Name</string>
    <string name="new_message_subject_hint">Subject</string>
    <string name="new_message_body_hint">Enter message</string>
    <string name="pb_chat">Chatter</string>
    <string name="logout">Logout</string>
    <string name="avatar_showing">avatar</string>
    <string name="checked">checked</string>
    <string name="unchecked">unchecked</string>
    <string name="menu_item_delete">Delete</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="firebase_token_pref">com.dcalabrese22.dan.pbmessenger.FIREBASE_TOKEN_KEY</string>
    <string name="current_firebase_token">firebase_token</string>
    <string name="action_create_new_user">Register</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_link_login">Login</string>
    <string name="existing_account">Already have an account? Login here!</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_image">Image</string>
    <string name="btn_browse">Browse</string>

    <string name="notification_channel_name">Messages</string>
    <string name="notification_channel_description">Notification on new message</string>

    <string name="send_reply_to">Send reply to </string>
    <string name="toast_removed">Removed</string>
    <string name="sent">sent</string>
    <string name="received">received</string>
    <string name="lastMessage">lastMessage</string>
    <string name="lastMessageType">lastMessageType</string>
    <string name="timeStamp">timeStamp</string>

    <string name="sort_desc">DESC</string>
    <string name="channel_message_id">com.dcalabrese22.dan.chatter.message</string>

    <string name="username_in_use">Username already exists. Please sign in to " +
                                "continue or choose a new username.</string>
    <string name="password_less_than_6">Password must be at least 6 characters</string>

    <string name="logo_content_description">Chatter</string>
    <string name="userimage_content_description">User image</string>
    <string name="conversation_check_content_description">check mark</string>
    <string name="widget_new_message_content_description">New Message</string>
    <string name="chat_fab_content_description">Send reply</string>
    <string name="conversations_fab_content_description">Create new message</string>
    <string name="new_message_fab_content_description">Send new message</string>

</resources>
